Fix enter overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 }
 
 body {
+	--horizontal-top-padding: 100px;
+	--horizontal-bottom-padding: 200px;
+	--extra-height: 50px;
+
 	background-color: #000;
 	padding: 20px;
 	overflow: hidden;
